--- a/feedback.html
+++ b/feedback.html
@@ -7,7 +7,7 @@
 	<!-- CSS links -->
 	<link rel="stylesheet" href="static/css/feedback.css">
 	<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
-	<link rel="stylesheet" href="static/css/animate.css">
+	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/3.7.0/animate.css">
 	<link href="https://fonts.googleapis.com/css?family=Oswald&amp;subset=cyrillic" rel="stylesheet">
 	<link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.3.1/css/all.css" integrity="sha384-mzrmE5qonljUremFsqc01SB46JvROS7bZs3IO2EmfFsd15uHvIt+Y8vEf7N7fWAU" crossorigin="anonymous">
 	<link rel="stylesheet" href="static/css/bootstrap-select.min.css">
@@ -40,7 +40,7 @@
 					<div class="row mt-1">
 						<div class="col-1"><span class="pl-3">1</span></div>
 						<div class="col-10">
-							<div class="slider__container">
+							<div class="slider-container">
 								<input type="range" min="1" max="10" value="1" class="slider" v-model = "rating">
 							</div>
 						</div>
@@ -53,11 +53,13 @@
 						<textarea rows="5" v-model = "commentService"></textarea>
 					</div>
 					<div class="row mt-3">
-						<button class="btn btn-primary ml-auto mr-auto" @click = "sendEmail">Отправить</button>
+						<button class="btn btn-primary ml-auto mr-auto" @click = "sendEmail">
+							Отправить
+						</button>
 					</div>
 				</div>
 			</div>
-			<div class="col-xl-6 col-lg-5 col-md-8 offset-md-2 offset-xl-1 offset-lg-1 main__text animated slideInRight">
+			<div class="col-xl-6 col-lg-5 col-md-8 offset-md-2 offset-xl-1 offset-lg-1 main-text animated slideInRight">
 				<div>
 					<div class="row">
 						<h1>Оставьте отзыв</h1>
@@ -72,42 +74,6 @@
 			</div>
 		</div>
 	</div>
-	
+	<script src= 'static/js/feedback.js'></script>
 </body>
-
-<script>
-	var app = new Vue({
-    el: '#app',
-    data: {
-	  radioBtns: ['NoiseSearch','CityLogistics','Scatter','ClusteringLight','PassFlow','WeatherHistory',
-	'RoadSigns', 'Открытая недвижимость','LandProber'],
-	serviceName: '',
-	commentService: '',
-	rating: 1,
-    },
-	methods:{
-		sendEmail(){
-			let service_id = "gmail"
-			let template_id = "feedback"
-			let template_params = {
-				service_name : this.serviceName,
-				service_rating: this.rating,
-				comment_service : this.commentService
-			}
-			emailjs.send(service_id,template_id,template_params).then(function(response) {
-				alert('Успешно! Спасибо за ваш отзыв:)')
-			}, function(error) {
-				alert('Неудачно! Попробуйте еще раз! Или обратитесь в техподдержку: urbanbasis@gmail.com')
-			});
-
-			
-		}
-	},
-    mounted(){
-		(function(){
-			emailjs.init("user_ToxHDx4frRFOEHUO33Muw");
-   		})();
-    }
-  })
-</script>
 </html>
