--- a/404.html
+++ b/404.html
@@ -21,8 +21,13 @@
 <body>
     <div class="main-wrapper" id = "app">
         <div class="container">
-            <div class="row error-wrapper">
-                <h1 class="error-name">404</h1>
+            <div class="row language-btn-block">
+                <a class="language-btn">EN</a>
+            </div>
+            <div class="row error">
+                <div class="error-wrapper">
+                    <h1 class="error-name">404</h1>
+                </div>
             </div>
             <div class="row error-description">
                 <h1>Page not found</h1>
