--- a/502.html
+++ b/502.html
@@ -21,8 +21,10 @@
 <body>
     <div class="main-wrapper">
         <div class="container">
-            <div class="row error-wrapper">
-                <h1 class="error-name">502</h1>
+            <div class="row error">
+                <div class="error-wrapper">
+                    <h1 class="error-name">502</h1>
+                </div>
             </div>
             <div class="row error-description">
                 <div class="description-wrapper">
